--- a/CMakeLists_iar.tmpl
+++ b/CMakeLists_iar.tmpl
@@ -3,28 +3,28 @@ cmake_minimum_required(VERSION 3.22)
 # Set the project name, [description] and [version],
 # while enabling its required languages
 project(%project_name% 
-	DESCRIPTION "Electricity meter: R32 case, shunt, RS485, dlms protocol support"
+	DESCRIPTION "Project description"
 	VERSION 1.0.0
 	LANGUAGES C ASM)
 
 # Set base path to sources
 set(sources_base_path "%sources_base%")
-# Add the executable for the "my_test" target,
+# Add the executable for the "my_project" target,
 # specifying its source files
-add_executable(my_test
+add_executable(my_project
 	# Source files
 %source_file%
 	)
 
-# Add the library for the "my_test" target,
+# Add the library for the "my_project" target,
 # specifying its source files
-target_link_libraries(my_test
+target_link_libraries(my_project
 	# Library source files
 %lib_files%
 	)
 
-# Set the properties for the "my_test" target
-set_target_properties(my_test PROPERTIES
+# Set the properties for the "my_project" target
+set_target_properties(my_project PROPERTIES
 	DEVICE        %chip%
 	CPU           %core%
 	FPU           %fpu%
@@ -34,24 +34,25 @@ set_target_properties(my_test PROPERTIES
 
 
 # Применяется лишь для цели "RequestGenerator":
-target_include_directories(my_test PUBLIC
+target_include_directories(my_project PUBLIC
 	$<$<COMPILE_LANGUAGE:C>:
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 %include_dir%
 	>)
 
-# Set a preprocessor symbol, usable from "my_test" target (unused symbols: USE_ASM=1)
-target_compile_definitions(my_test PUBLIC 
+# Set a preprocessor symbol, usable from "my_project" target (unused symbols: USE_ASM=1)
+target_compile_definitions(my_project PUBLIC 
 %preprocessor_defines%)
 
-# Set right opt level
-string(REPLACE "-Oh" "-Ohz" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
+# Clean default opt level
+string(REPLACE "-Oh" "" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
 
-# Set the compiler flags for the "my_test" target
-target_compile_options(my_test PRIVATE
+# Set the compiler flags for the "my_project" target
+target_compile_options(my_project PRIVATE
 	$<$<COMPILE_LANGUAGE:C>:
 	
 	$<$<CONFIG:Release>:	>
+    -Ohz
 	--dlib_config "${TOOLKIT_DIR}%dlib_config%"
 	--debug 
 	--diag_suppress %diag_suppress%
@@ -59,7 +60,7 @@ target_compile_options(my_test PRIVATE
 	--endian=$<TARGET_PROPERTY:ENDIAN>
 	-e
 		# Set the list output
-	-l $<TARGET_FILE_DIR:my_test>
+	-l $<TARGET_FILE_DIR:my_project>
 	--cpu=$<TARGET_PROPERTY:CPU>
 	--fpu=$<TARGET_PROPERTY:FPU>
 	--vla >
@@ -74,13 +75,13 @@ target_compile_options(my_test PRIVATE
 	--fpu $<TARGET_PROPERTY:FPU>
 	-E10000 > )
 
-# Set the linker options for the "my_test" target
-target_link_options(my_test PRIVATE
+# Set the linker options for the "my_project" target
+target_link_options(my_project PRIVATE
 	$<$<CONFIG:Release>:	>
 
 	%linker_symbol%
 	# Create a map file from the target's ELF
-	--map $<TARGET_FILE:my_test>.map
+	--map $<TARGET_FILE:my_project>.map
 
 	# Set the linker script
 	--config $<TARGET_PROPERTY:DEVICE_ICF>
@@ -89,17 +90,22 @@ target_link_options(my_test PRIVATE
 	--entry main_bl 
 	--vfe )
 
-# Add a custom target for `ielftool` to generate additional output
-add_custom_target(ielftool DEPENDS $<TARGET_FILE:my_test>
-	COMMAND ${CMAKE_IAR_ELFTOOL}
-	--silent
-	# Genex evaluates FORMAT property to select the output format
-	--$<TARGET_PROPERTY:ielftool,FORMAT>
-	# Uses the target file as input
-	$<TARGET_FILE:my_test>
-	# Name the output based on the selected format
-	$<TARGET_FILE:my_test>.$<TARGET_PROPERTY:ielftool,FORMAT> )
+# Function to convert the ELF output to other format
+# OUTPUT_FORMAT: bin ihex
+function(iar_elf_tool TARGET OUTPUT_FORMAT)
 
-# Set the custom target FORMAT property
-# to select the desired output format (ihex|srec|bin)
-set_target_properties(ielftool PROPERTIES FORMAT bin)
+    # Variables to make it readable
+    set(target_output_name $<TARGET_PROPERTY:${TARGET},OUTPUT_NAME>)
+    set(target_name $<TARGET_PROPERTY:${TARGET},NAME>)
+
+    # Check if target_output_name is set, then use it, else use targat_name
+    set(output_name $<IF:$<BOOL:${target_output_name}>,${target_output_name},${target_name}>)
+    add_custom_command(TARGET ${TARGET} POST_BUILD
+        COMMAND ${CMAKE_IAR_ELFTOOL} --silent --${OUTPUT_FORMAT}
+        $<TARGET_FILE:${TARGET}>
+        ${output_name}.${OUTPUT_FORMAT}
+    )
+endfunction()
+
+# Call the function
+iar_elf_tool(my_project bin)
