--- a/CMakeLists.tmpl
+++ b/CMakeLists.tmpl
@@ -8,7 +8,7 @@ project(%project_name%
 	LANGUAGES C ASM)
 
 # Set base path to sources
-set(sources_base_path "%sources_base%")
+set(SOURCES_BASE_PATH "%sources_base%")
 # To export compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Add the executable for the "my_test" target,
@@ -32,7 +32,7 @@ set_target_properties(my_test PROPERTIES
 	FPU           %fpu%
 	ARCHITECTURE  ${CMAKE_SYSTEM_PROCESSOR}
 	ENDIAN        little
-	DEVICE_ICF    "${sources_base_path}%linker_icf%")
+	DEVICE_ICF    "${SOURCES_BASE_PATH}%linker_icf%")
 
 
 # Применяется лишь для цели "RequestGenerator":
