--- a/CMakeLists_iar.tmpl
+++ b/CMakeLists_iar.tmpl
@@ -8,7 +8,7 @@ project(%project_name%
 	LANGUAGES C ASM)
 
 # Set base path to sources
-set(sources_base_path "%sources_base%")
+set(SOURCES_BASE_PATH "%sources_base%")
 # Add the executable for the "my_project" target,
 # specifying its source files
 add_executable(my_project
@@ -30,7 +30,7 @@ set_target_properties(my_project PROPERTIES
 	FPU           %fpu%
 	ARCHITECTURE  ${CMAKE_SYSTEM_PROCESSOR}
 	ENDIAN        little
-	DEVICE_ICF    "${sources_base_path}%linker_icf%")
+	DEVICE_ICF    "${SOURCES_BASE_PATH}%linker_icf%")
 
 
 # Применяется лишь для цели "RequestGenerator":
